[package]
name = "poc_cargo"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
autumn-macros = { version = "0.3.0", path = "../autumn-macros" }
autumn-web = { version = "0.3.0", path = "../autumn" }
axum.workspace = true
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
