[package]
name = "scratch_proj"
version = "0.1.0"
edition = "2024"

[dependencies]
# Enable optional subsystems later by switching to:
# autumn-web = { version = "0.5.0", features = ["redis", "mail"] }
autumn-web = "0.5.0"
maud = { version = "0.27", features = ["axum"] }
diesel_migrations = "2"

[dev-dependencies]
# tokio runtime macros are needed for #[tokio::test] in integration tests.
tokio = { version = "1", features = ["rt", "macros"] }

[workspace]
