[package]
name = "autumn-harvest-macros"
description = "Proc macros for autumn-harvest workflow engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[lints]
workspace = true
