[package]
name = "autumn-harvest"
description = "Durable workflow orchestration engine core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["db"]
db = [
    "dep:deadpool",
    "dep:diesel",
    "dep:diesel-async",
    "dep:diesel_migrations",
    "dep:scoped-futures",
    "dep:tokio-postgres",
]
testing = []

[dependencies]
autumn-harvest-macros = { path = "../autumn-harvest-macros" }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
lru = "0.13"
croner = "2.2"
deadpool = { workspace = true, optional = true }
diesel = { workspace = true, optional = true }
diesel-async = { workspace = true, optional = true }
diesel_migrations = { workspace = true, optional = true }
scoped-futures = { version = "0.1", optional = true }
tokio-postgres = { version = "0.7", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }

[lints]
workspace = true
