[package]
name = "blog"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
autumn-web = { path = "../../autumn", features = ["i18n", "oauth2"] }
autumn-admin-plugin = { path = "../../autumn-admin-plugin" }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2", features = ["postgres", "chrono"] }
diesel-async = { version = "0.8", features = ["postgres"] }
pq-sys = { version = "0.7", features = ["bundled_without_openssl"] }
diesel_migrations = "2"
maud = { version = "0.27", features = ["axum"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
# Enables TestDb (shared Postgres testcontainer) for integration tests.
# The `db` feature is inherited from [dependencies]; test-support adds TestDb.
autumn-web = { path = "../../autumn", features = ["test-support"] }
serde_json = "1"
example-e2e = { path = "../../example-e2e" }

[features]
# Enable the headless-browser system smoke. Requires Chromium on the host.
#   cargo test -p blog --features system-tests --test smoke -- --include-ignored
system-tests = ["autumn-web/system-tests"]

[[test]]
name = "smoke"
path = "tests/system/smoke.rs"

[lints.rust]
unsafe_code = "forbid"
