[package]
name = "bookmarks-distributed"
edition.workspace = true
version.workspace = true
publish = false

[dependencies]
autumn-web = { path = "../../autumn" }
autumn-cache-redis = { path = "../../autumn-cache-redis" }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2", features = ["postgres", "chrono"] }
diesel-async = { version = "0.9", features = ["postgres"] }
futures = { workspace = true }
pq-sys = { version = "0.7", features = ["bundled_without_openssl"] }
diesel_migrations = "2"
maud = { version = "0.27", features = ["axum"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { workspace = true }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
tracing = "0.1"
validator = { version = "0.20", features = ["derive"] }

[dev-dependencies]
autumn-web = { path = "../../autumn", features = ["test-support"] }
autumn-cache-redis = { path = "../../autumn-cache-redis" }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
