[package]
name = "bookmarks-sharded"
edition.workspace = true
version.workspace = true
publish = false

[dependencies]
autumn-web = { path = "../../autumn" }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2", features = ["postgres", "chrono"] }
diesel-async = { version = "0.9", features = ["postgres"] }
pq-sys = { version = "0.7", features = ["bundled_without_openssl"] }
diesel_migrations = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
validator = { version = "0.20", features = ["derive"] }

[lints.rust]
unsafe_code = "forbid"
