[package]
name = "bookmarks-sharded"
edition.workspace = true
version.workspace = true
publish = false

[dependencies]
autumn-web = { path = "../../autumn" }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2", features = ["postgres", "chrono"] }
diesel-async = { version = "0.8", features = ["postgres"] }
pq-sys = { version = "0.7", features = ["bundled_without_openssl"] }
diesel_migrations = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
validator = { version = "0.20", features = ["derive"] }

[dev-dependencies]
example-e2e = { path = "../../example-e2e" }

[features]
# Enable the headless-browser system smoke. Requires Chromium on the host.
#   cargo test -p bookmarks-sharded --features system-tests --test smoke -- --include-ignored
system-tests = ["autumn-web/system-tests"]

[[test]]
name = "smoke"
path = "tests/system/smoke.rs"

[lints.rust]
unsafe_code = "forbid"
