[package]
name = "outbound-http"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
autumn-web = { path = "../../autumn" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lints.rust]
unsafe_code = "forbid"
